# Playhouse

./: .buildconfig  .eslintrc.yaml  .eslintrc.yml  .gitattributes  .gitignore  Makefile  Playground.doap  README.md  Webground.doap  jsconfig.json  meson.build  package-lock.json  package.json  re.sonny.Playhouse.json  re.sonny.Webground.json
.husky/: pre-commit  pre-push
data/: meson.build  re.sonny.Playhouse.desktop  re.sonny.Playhouse.gschema.xml  re.sonny.Playhouse.metainfo.xml  re.sonny.Playhouse.service  re.sonny.Webground.desktop  re.sonny.Webground.gschema.xml  re.sonny.Webground.metainfo.xml  re.sonny.Webground.service
po/: POTFILES  fr.po  it.po  meson.build  re.sonny.Playground.pot  re.sonny.Playhouse.pot  re.sonny.Webground.pot
src/: Devtools.js  Shortcuts.js  ShortcutsWindow.blp  ShortcutsWindow.js  WebView.js  about.js  application.js  bin.js  local.js  main.js  meson.build  re.sonny.Playhouse  style.css  utils.js  window.blp  window.js  window.ui
